# DecoderArchitecture

./: LICENSE  README.md  dataset.ipynb  load_model.ipynb  make_data.ipynb  make_dataset.ipynb  pyproject.toml  reflex_model.py  requirements.txt  run_params.json  test.ipynb  train.ipynb  train_pin_model.ipynb
.ipynb_checkpoints/: example_fp16-checkpoint.ipynb  reflex_model-checkpoint.py
configs/: run_params.json
extra/: wandb-metadata.json
main_notebooks/: test.ipynb  train_pin_model.ipynb
prepare_notebooks/: make_dataset.ipynb
src/: reflex_model.py
